# libnv-portable

./: CMakeLists.txt
cmake/: FindAtf-C.cmake
tests/: nvlist_send_recv_test.c
